<resources>
    <string name="app_name">行业找工作</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choose_industries">ChooseIndustriesActivity</string>
    <string name="activity_select_city">SelectCityActivity</string>
    <string name="title_activity_welcome">行业找工作</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_person_center">PersonCenterActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_regist_email">RegistEmailActivity</string>
    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="xiala">下拉查看</string>
    <string name="shangla">上拉查看</string>
    <string name="jobinfo">职位详情</string>
    <string name="companyinfo">公司详情</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="morePersonInfo">更专业的简历，需要更完善的信息！</string>
    <string name="autoCode">验    证    码：</string>
    <string name="personal_Centre">个人中心</string>
    <string name="resume_Centre">简历中心</string>
    <string name="News__Centre">就业指导</string>
    <string name="Pay__Query">薪酬查询</string>
    <string name="seting">设置  </string>
    <string name="searchjob_result">找工作</string>
    <string name="findjob">找工作</string>
    <string name="nearbyjob">附近的工作</string>
    <string name="search_key">请输入关键字</string>
    <string name="function">职能</string>
    <string name="map">选择地点</string>
    <string name="search_btn">搜   职  位</string>
    <string name="search_Recent">近期搜索条件</string>
    <string name="clear_btn">清空所有</string>
    <string name="search_condition">搜索条件</string>
    <string name="job_key">设置为抢工作</string>
    <string name="setRobJob_succes">操作成功</string>
    <string name="openbind_hasbinded">已绑定行业选择</string>
    <string name="openbind_title">账号绑定</string>
    <string name="openbind_firstbind">第一次访问</string>
    <string name="openbind_truename">真实姓名</string>
    <string name="openbind_email">常用邮箱</string>
    <string name="openbind_hadaccountnummber">已有英才网账号</string>
    <string name="openbind_username">用户名</string>
    <string name="openbind_pwd">密码</string>
    <string name="openbind_login">登录</string>
    <string name="openbind_bindAndlogin">绑定并登录</string>
    <string name="screen">筛选</string>
    <string name="PositionDetails">职位详情</string>
    <string name="poster">海报</string>
    <string name="Company_Introduce">公司介绍</string>
    <string name="education">学历：</string>
    <string name="place">地点：</string>
    <string name="release">发布：</string>
    <string name="otherpositions">其他职位</string>
    <string name="experience">经验：</string>
    <string name="numberofpeople">人数：</string>
    <string name="treatment">待遇：</string>
    <string name="mailbox">邮箱：</string>
    <string name="jobdescription">职位描述：</string>
    <string name="jobplace">工作地点：</string>
    <string name="developpost">开发岗位：</string>
    <string name="askfor">要求：</string>
    <string name="collect_succeed">收藏职位成功</string>
    <string name="delete_collect_succeed">取消收藏成功</string>
    <string name="locating">定位中</string>
    <string name="search">搜索</string>
    <string name="notfound">抱歉，未找到！</string>
    <string name="key_word">请输入关键字</string>
    <string name="locatez_as">定位为</string>
    <string name="switch_ornot">，是否切换？</string>
    <string name="city_show_text_hot">热门城市</string>
    <string name="city_hotcity_curlocationcity_text">定位城市</string>
    <string name="third_title_close">关闭</string>
    <string name="city_hotcity_searchedittext_hint">请输入城市名,首字母或拼音</string>
    <string name="xml_loading_01">加载中</string>
    <string name="cancel">取消</string>
    <string name="quit_dialog_cancel">取 消</string>
    <string name="assistant_upload_dialog_title">提示</string>
    <string name="properties">性质：</string>
    <string name="scale">规模：</string>
    <string name="industry">行业：</string>
    <string name="address">地址：</string>
    <string name="company_introduction">公司介绍：</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="datePicker_name">日期选择控件</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="money">薪资待遇</string>
    <string name="all">全部</string>
    <string name="time">发布时间</string>
    <string name="time_today">今天</string>
    <string name="time_three">近三天</string>
    <string name="time_week">近一周</string>
    <string name="education_background_askfor">学历要求</string>
    <string name="askfor_junior_high_school">初中以上</string>
    <string name="askfor_bachelor_or_above_degree">本科以上</string>
    <string name="askfor_master">硕士以上</string>
    <string name="job">工作经验</string>
    <string name="job_no">无经验</string>
    <string name="job_oneyear">1年以下</string>
    <string name="job_threeyear">1-3年</string>
    <string name="queding">确定</string>
    <string name="quxiao">取消</string>
    <string name="scale_job_nature">工作性质</string>
    <string name="scale_job_site">附近工作</string>
    <string name="scale_of_company">公司规模</string>
    <string name="choose_job_year">选择工作年限</string>
    <string name="choose_job_time">选择发布日期</string>
    <string name="choose_education_background">选择学历</string>
    <string name="howToGet">如何得知：</string>
    <string name="no_record_en">no record</string>
    <string name="resume_send">简历外发</string>
    <string name="recive_email">接收邮箱：</string>
    <string name="email_content">邮件内容：</string>
    <string name="resume_select">发送</string>
    <string name="resume_name">简历名称:</string>
    <string name="resume_time">创建时间:</string>
    <string name="update_time">更新时间:</string>
    <string name="hasresume_en">英文简历:</string>
    <string name="common_resume">社会人简历:</string>
    <string name="myresume1">我的简历1</string>
    <string name="myresume">我的简历</string>
    <string name="integrity">完整度：80%</string>
    <string name="notnull">必填:填写完整才可投递简历</string>
    <string name="resume_mold">选填:完善信息可以提高求职成功率</string>
    <string name="pop_text">我是应届毕业生</string>
    <string name="personal_info">个人信息</string>
    <string name="education_experience">教育背景</string>
    <string name="pop_name">简历名称:</string>
    <string name="job_intention">求职意向</string>
    <string name="cultivate_experience">培训经历</string>
    <string name="work_experience">工作经验</string>
    <string name="self_assessment">自我评价</string>
    <string name="project_experience">项目经验</string>
    <string name="no_job_experience">我没工作经验</string>
    <string name="more">更多</string>
    <string name="language">语言能力</string>
    <string name="now_positions">现任职位：</string>
    <string name="hope_positions">期望职位：</string>
    <string name="hope_money">期望薪资：</string>
    <string name="Job_Status">求职状态：</string>
    <string name="resume_digest">简历摘要</string>
    <string name="professional_skill">专业技能</string>
    <string name="delete">删除</string>
    <string name="upgrade_success">简历升级成功</string>
    <string name="upgrade_faile">简历升级失败，请稍后重试</string>
    <string name="send_faile">发送失败，请稍后重试</string>
    <string name="resume_language">语言能力</string>
    <string name="resume_language_type">语言类别</string>
    <string name="resume_language_readlevel">读写能力</string>
    <string name="resume_language_speaklevel">听说能力</string>
    <string name="resume_order_zhixi">职系</string>
    <string name="error">连接超时</string>
    <string name="error_null">信息为空</string>
    <string name="error_net">网络不稳定，请稍后重试</string>
    <string name="error_notnet">无法连接网络</string>
    <string name="error_faile_connect">服务器连接失败</string>
    <string name="error_setting_faile">设置失败</string>
    <string name="error_101">网络不稳定</string>
    <string name="error_102">服务器临时不可用</string>
    <string name="error_103">请求无效</string>
    <string name="error_104">调用次数超过了限制</string>
    <string name="error_105">请求来自未经授权的IP地址</string>
    <string name="error_106">客户端版本过期，请升级客户端</string>
    <string name="error_201">请求数据校验失败</string>
    <string name="error_202">必须是POST提交</string>
    <string name="error_203">无效的SESSION_KEY</string>
    <string name="error_204">session key已过期</string>
    <string name="error_205">无效或缺少服务参数</string>
    <string name="error_206">执行失败</string>
    <string name="error_207">缺少必填项</string>
    <string name="error_208">记录不存在</string>
    <string name="error_209">超过记录最大限制</string>
    <string name="error_210">记录不可修改</string>
    <string name="error_301">用户不存在</string>
    <string name="error_302">用户名已经存在</string>
    <string name="error_303">用户未登录</string>
    <string name="error_304">简历不存在</string>
    <string name="error_305">第三方账号未绑定</string>
    <string name="error_306">本站账号已绑定过此类型第三方账号</string>
    <string name="error_307">第三方生成账号，只有一个绑定信息，不能够解绑</string>
    <string name="error_308">用户所属的行业不存在</string>
    <string name="error_309">简历/简历类型数超过最大分数</string>
    <string name="error_310">用户名与邮箱不匹配</string>
    <string name="error_311">用户名或密码错误</string>
    <string name="error_312">用户被禁止</string>
    <string name="error_313">第三方账号已被本站账号绑定过</string>
    <string name="error_314">此账号类型无需激活</string>
    <string name="error_315">重置密码无效</string>
    <string name="error_317">简历不存在此项</string>
    <string name="error_318">不可创建非中文简历</string>
    <string name="error_319">简历的类型不可修改</string>
    <string name="error_320">简历不可复制</string>
    <string name="error_321">缺少中文简历</string>
    <string name="error_327">手机号码已被使用</string>
    <string name="error_401">职位已过期</string>
    <string name="error_402">职位已过期</string>
    <string name="error_403">职位近期已经投递过了</string>
    <string name="error_404">简历完整度较低</string>
    <string name="error_405">请求操作太过频繁，3秒后重试</string>
    <string name="error_406">职位已经收藏</string>
    <string name="error_407">职位已保密</string>
    <string name="error_408">用户被禁止投递</string>
    <string name="error_411">企业不存在</string>
    <string name="error_412">企业已经关闭</string>
    <string name="error_413">请完善您的简历</string>
    <string name="error_417">简历类型与职位类型不匹配</string>
    <string name="error_501">新闻不存在</string>
    <string name="error_502">新闻栏目不存在</string>
    <string name="error_503">新闻/推荐不是审核通过状态，不可更新浏览量</string>
    <string name="error_504">投票/调查报告已结束，不可保存</string>
    <string name="error_2010">密码不能包含企业名称与电话邮箱用户名</string>
    <string name="error_2012">密码与确认密码不一至</string>
    <string name="error_2013">用户名不合法(支持字母、数字、下划线，长度4-25位)</string>
    <string name="error_2014">用户名已存在</string>
    <string name="no_photo">没有头像</string>
    <string name="edit_personal_info">职位已经收藏</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="date_of_birth">出生日期</string>
    <string name="workyear">工作经验</string>
    <string name="country">国家地区</string>
    <string name="phone_number">手机号码</string>
    <string name="select">请选择</string>
    <string name="sellerintro">销售顾问推荐</string>
    <string name="friendInto">同事朋友推荐</string>
    <string name="InternetInfo">网络渠道</string>
    <string name="otherInfo">其他渠道</string>
    <string name="myresume_privewresume_infoname201">求职状态</string>
    <string name="myresume_privewresume_infoname202">工作性质 </string>
    <string name="myresume_privewresume_infoname203">期望职位 </string>
    <string name="myresume_privewresume_infoname204">期望领域</string>
    <string name="myresume_privewresume_infoname205">工作地点</string>
    <string name="myresume_privewresume_infoname206">期望月薪</string>
</resources>