<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40px"
        android:background="@color/background"
        >

        <TextView
            android:layout_marginLeft="@dimen/dimen_10px"
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_select"
            android:layout_marginRight="@dimen/dimen_10px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/commit"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/dimen_15px"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200px"
            android:layout_marginBottom="5dp"
            android:background="@color/background"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            <com.hr.ui.view.custom.DatePickerView
                android:id="@+id/year_pv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />
            <LinearLayout
                android:id="@+id/year_text_ll"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
            <TextView
                android:id="@+id/year_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/text2"
                android:textSize="@dimen/text_size_16" />
            </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.hr.ui.view.custom.DatePickerView
                android:id="@+id/month_pv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:id="@+id/month_text"
                android:textColor="@color/text2"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/day_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <com.hr.ui.view.custom.DatePickerView
                android:id="@+id/day_pv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/day_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/text2"
                android:textSize="@dimen/text_size_16" />
</LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>