<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView44"
            style="@style/resume_previewresume_infoname"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:text="@string/myresume_privewresume_infoname201" />

        <TextView
            android:id="@+id/tv_previewresume_state"
            style="@style/resume_previewresume_info"
            android:layout_alignTop="@+id/textView44"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/textView44"
            android:layout_toRightOf="@+id/textView44"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView45"
            style="@style/resume_previewresume_infoname"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:text="@string/myresume_privewresume_infoname202" />

        <TextView
            android:id="@+id/tv_previewresume_jobtype"
            style="@style/resume_previewresume_info"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/textView45"
            android:layout_toRightOf="@+id/textView45"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView46"
            style="@style/resume_previewresume_infoname"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:text="@string/myresume_privewresume_infoname203" />

        <TextView
            style="@style/resume_previewresume_info"
            android:layout_alignTop="@+id/textView46"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/textView46"
            android:layout_toRightOf="@+id/textView46"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView47"
            style="@style/resume_previewresume_infoname"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:text="@string/myresume_privewresume_infoname204" />

        <TextView
            style="@style/resume_previewresume_info"
            android:layout_alignTop="@+id/textView7"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/textView47"
            android:layout_toRightOf="@+id/textView47"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView48"
            style="@style/resume_previewresume_infoname"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:text="@string/myresume_privewresume_infoname205" />

        <TextView
            style="@style/resume_previewresume_info"
            android:layout_alignTop="@+id/textView48"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/textView48"
            android:layout_toRightOf="@+id/textView48"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView49"
            style="@style/resume_previewresume_infoname"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:text="@string/myresume_privewresume_infoname206" />
        <TextView
            style="@style/resume_previewresume_info"
            android:layout_alignTop="@+id/textView49"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/textView49"
            android:layout_toRightOf="@+id/textView49"
            android:text="" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#fff" />
</LinearLayout>